--- a/config.xml.dist
+++ b/config.xml.dist
@@ -7,7 +7,7 @@
     <author email="info@hyperweb2.com" href="http://www.hyperweb2.com">
         HyperWeb2
     </author>
-    <icon src="logo.jpg" />
+    <icon src="www/data/img/logo.jpg" />
     <preference name="permissions" value="none" />
     <preference name="orientation" value="portrait" />
     <preference name="target-device" value="universal" />
