+ fixed multiple bugs + implemented language system + added bootstrap module + code cleaning

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ local.properties
 
 # App
 
+/config.xml
 /build/
 /platforms/
 /plugins/
@@ -83,5 +84,6 @@ local.properties
 /www/modules/*
 !/www/modules/jquery/
 !/www/modules/respondjs/
+!/www/modules/bootstrap/
 /www/conf/*
 !/www/conf/*.def.*
